...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mNy-gV-vOX" secondAttribute="trailing" constant="20" id="7Eb-ub-fbq"/>
                            <constraint firstItem="mNy-gV-vOX" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="DbP-uc-VkD"/>
                            <constraint firstItem="mNy-gV-vOX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Mn5-vj-5vi"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Main" id="9hO-sR-D8d">
                        <barButtonItem key="rightBarButtonItem" title="History" id="A3d-Oy-zFI">
                            <connections>
                                <segue destination="8sW-nw-6EM" kind="show" id="Qb0-7u-QpE"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                <rect key="frame" x="20" y="88" width="374" height="30"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="gb0-hb-i44"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                <state key="normal" title="New record arrived. pull to refresh or tap here">
                                    <color key="titleColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="btnHintOnTapped:" destination="8sW-nw-6EM" eventType="touchUpInside" id="bHw-lq-f83"/>
                                </connections>
                            </button>
...
