//
//  DemoUITests.swift
//  DemoUITests
//
//  Created by Ricol Wang on 29/8/20.
//  Copyright © 2020 DeepSpace. All rights reserved.
//

import XCTest

class DemoUITests: XCTestCase
{
    override func setUpWithError() throws
    {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws
    {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testMainView() throws
    {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        XCTAssertFalse(XCUIApplication().tableRows.firstMatch.exists)
    }
    
    func testHistoryShowNewRecordHint() throws
    {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        app.navigationBars["Main"].buttons["History"].tap()
        
        let btn = app.buttons["New record arrived. pull to refresh or tap here"]
        let exists = NSPredicate(format: "exists == 1")
        
        wait(for: [expectation(for: exists,
        evaluatedWith: btn, handler: nil)], timeout: 10)
    }
    
    func testHistory() throws
    {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        app.navigationBars["Main"].buttons["History"].tap()
        XCTAssertTrue(app.tables.cells.firstMatch.exists)
    }
    
    func testDetailsView() throws
    {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        app.navigationBars["Main"].buttons["History"].tap()
        app.tables.cells.firstMatch.tap()
        XCTAssertTrue(app.tables.cells.firstMatch.exists)
    }
}
